# solar-power-forecasting-system

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb  01_equipment_fault_detection.ipynb  01_solar_forecasting_plant1.ipynb  02_solar_forecasting_plant2.ipynb  solar_plant_analytics.ipynb  sql_analysis.ipynb
src/: dataset.py  train.py
tests/: test_dataset.py  test_train.py
