[project]
name = "solar-power-forecasting-system"
version = "0.1.0"
description = "Solar power output forecasting for two PV plants using LightGBM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3,!=3.0.4",
    "ruff>=0.15.20",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
